updated app and template

--- a/templates/main.html
+++ b/templates/main.html
@@ -12,7 +12,7 @@
             <div> 
                 <form class="row p-3 border border-success rounded" method="post" enctype="multipart/form-data">
                     <div class="col-9">
-                        <input class="form-control" type="file" id="document-input" name="doc-file">
+                        <input class="form-control" type="file" id="document-input" name="doc-file" multiple>
                     </div>
                     <div class="col-3">
                         <input type="submit" class="btn btn-success">
