--- a/templates/report.html
+++ b/templates/report.html
@@ -16,7 +16,8 @@
                             <img src="data:image/jpeg;base64, {{ image }}" class="w-100">
                         </div>
                         <div class="col-6 d-flex flex-column justify-content-around">
-                            {% for pred in preds %}
+                            {% for img in preds %}
+                            {% for tbl in img %}
                                 <div class="border border-2 rounded m-1 p-1">
                                     <table class="table">
                                         <thead>
@@ -29,15 +30,15 @@
                                         <tbody>
                                             <tr>
                                                 <th scope="row">
-                                                    <input class="form-control border-3 {{pred['id']['confidence']}} m-1" type="text" value="{{pred['id']['text']}}">
+                                                    <input class="form-control border-3 {{tbl['id']['confidence']}} m-1" type="text" value="{{tbl['id']['text']}}">
                                                     <img src="data:image/jpeg;base64, {{pred['id']['crop']}}" style="height: 50px;" alt="No image">
                                                 </th>
                                                 <td>
-                                                    <input class="form-control border-3 {{pred['date']['confidence']}} m-1" type="text" value="{{pred['date']['text']}}">
+                                                    <input class="form-control border-3 {{tbl['date']['confidence']}} m-1" type="text" value="{{tbl['date']['text']}}">
                                                     <img src="data:image/jpeg;base64, {{pred['date']['crop']}}" style="height: 50px;" alt="No image">
                                                 </td>
                                                 <td>
-                                                    <input class="form-control border-3 {{pred['doc']['confidence']}} m-1" type="text" value="{{pred['doc']['text']}}">
+                                                    <input class="form-control border-3 {{tbl['doc']['confidence']}} m-1" type="text" value="{{tbl['doc']['text']}}">
                                                     <img src="data:image/jpeg;base64, {{pred['doc']['crop']}}" style="height: 50px;" alt="No image">
                                                 </td>
                                             </tr>
@@ -45,15 +46,16 @@
                                     </table>
                                     <span class="fw-bold">info</span>
                                     <div class="border p-1">
-                                        <input class="form-control border-3 {{pred['info']['confidence']}} m-1" type="text" value="{{pred['info']['text']}}">
+                                        <input class="form-control border-3 {{tbl['info']['confidence']}} m-1" type="text" value="{{tbl['info']['text']}}">
                                         <img src="data:image/jpeg;base64, {{pred['info']['crop']}}" style="height: 100px;" alt="No image">
                                     </div>
                                     <span class="fw-bold">stamp</span>
                                     <div>
-                                        <input class="form-control border-3 {{pred['stamp']['confidence']}} m-1" type="text" value="{{pred['stamp']['text']}}">
+                                        <input class="form-control border-3 {{tbl['stamp']['confidence']}} m-1" type="text" value="{{tbl['stamp']['text']}}">
                                         <img src="data:image/jpeg;base64, {{pred['stamp']['crop']}}" style="height: 100px;" alt="No image">
                                     </div>
                                 </div>
+                            {% endfor %}
                             {% endfor %}
                             <div class="col-3">
                                 <input type="submit" class="btn btn-success">
