--- a/templates/report.html
+++ b/templates/report.html
@@ -17,7 +17,8 @@
                             <img src="data:image/jpeg;base64, {{ image }}" class="w-100">
                         </div>
                         <div class="col-6 d-flex flex-column justify-content-around">
-                            {% for pred in preds %}
+                            {% for doc in preds%}
+                            {% for pred in doc %}
                                 <div class="border border-2 rounded m-1 p-1">
                                     <table class="table">
                                         <thead>
@@ -55,6 +56,7 @@
                                         <img src="data:image/jpeg;base64, {{pred[outer_loop.index0]['stamp']['crop']}}" style="height: 100px;" alt="No image">
                                     </div>
                                 </div>
+                            {% endfor %}
                             {% endfor %}
                             <div class="col-3">
                                 <input type="submit" class="btn btn-success">
