--- a/templates/report.html
+++ b/templates/report.html
@@ -33,15 +33,15 @@
                                             <tr>
                                                 <th scope="row">
                                                     <input class="form-control border-3 {{pred['id']['confidence']}} m-1" type="text" value="{{pred['id']['text']}}">
-                                                    <img src="data:image/jpeg;base64, {{pred['id']['crop']}}" style="height: 50px;" alt="No image">
+                                                    <img src="data:image/jpeg;base64, {{pred['id']['crop']}}" style="height: 50px; max-width: 100%;" alt="No image">
                                                 </th>
                                                 <td>
                                                     <input class="form-control border-3 {{pred['date']['confidence']}} m-1" type="text" value="{{pred['date']['text']}}">
-                                                    <img src="data:image/jpeg;base64, {{pred['date']['crop']}}" style="height: 50px;" alt="No image">
+                                                    <img src="data:image/jpeg;base64, {{pred['date']['crop']}}" style="height: 50px; max-width: 100%;" alt="No image">
                                                 </td>
                                                 <td>
                                                     <input class="form-control border-3 {{pred['doc']['confidence']}} m-1" type="text" value="{{pred['doc']['text']}}">
-                                                    <img src="data:image/jpeg;base64, {{pred['doc']['crop']}}" style="height: 50px;" alt="No image">
+                                                    <img src="data:image/jpeg;base64, {{pred['doc']['crop']}}" style="height: 50px; max-width: 100%;" alt="No image">
                                                 </td>
                                             </tr>
                                         </tbody>
@@ -49,12 +49,12 @@
                                     <span class="fw-bold">info</span>
                                     <div class="border p-1">
                                         <input class="form-control border-3 {{pred['info']['confidence']}} m-1" type="text" value="{{pred['info']['text']}}">
-                                        <img src="data:image/jpeg;base64, {{pred['info']['crop']}}" style="height: 100px;" alt="No image">
+                                        <img src="data:image/jpeg;base64, {{pred['info']['crop']}}" style="height: 100px; max-width: 100%;" alt="No image">
                                     </div>
                                     <span class="fw-bold">stamp</span>
                                     <div>
                                         <input class="form-control border-3 {{pred['stamp']['confidence']}} m-1" type="text" value="{{pred['stamp']['text']}}">
-                                        <img src="data:image/jpeg;base64, {{pred['stamp']['crop']}}" style="height: 100px;" alt="No image">
+                                        <img src="data:image/jpeg;base64, {{pred['stamp']['crop']}}" style="height: 100px; max-width: 100%;" alt="No image">
                                     </div>
                                 </div>
                             {% endfor %}
